# kubsome

./: .angulardoc.json  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  dev.sh  install.sh  main.py  publish.sh  pyproject.toml  repro_injection.py  requirements.txt  start.sh
.Jules/: palette.md
.amazonq/rules/: ui-design-system.md
.github/workflows/: health-gate.yml.example  release.yml  workflows.yml
.jules/: bolt.md  growth_analysis.md  palette.md  sentinel.md
.kubsome/: policies.yaml
.kubsome/runbooks/: payment-recovery.yaml
Formula/: kubsome.rb
api/: app.py  auth.py  ratelimit.py  serve.py
api/routes/: analytics.py  contexts.py  deployments.py  describe.py  diagnostics.py  events.py  gateway.py  gitops.py  intelligence.py  logs.py  metrics.py  monitor.py  operations.py  overview.py  pods.py  terminal.py  ws.py
api/static/: chunk-24RTRB7U.js  chunk-47PU43P4.js  chunk-54AUKJZ7.js  chunk-5V63ZAXZ.js  chunk-AOIY7HGE.js  chunk-BEWQPPO5.js  chunk-BQFGSS6O.js  chunk-BTXEMC5R.js  chunk-CGL6QMM4.js  chunk-DLDAD6XF.js  chunk-EVUPX5ZY.js  chunk-GFMBUR3M.js  chunk-HEIZRBTJ.js  chunk-HIWOL4RC.js  chunk-HL3JCNFF.js  chunk-IVF6INTS.js  chunk-KKQDYBEW.js  chunk-LHQBI23K.js  chunk-M5CJ4KL3.js  chunk-MPPWXVZZ.js  chunk-NE4JGPQY.js  chunk-OHZ4ZYW6.js  chunk-SAR4P72Z.js  chunk-SIFB7STS.js  chunk-TYKA7HTF.js  chunk-U7GWGI3J.js  chunk-VOFTIIUQ.js  chunk-X6IFGSM3.js  chunk-Z2F2RJHB.js  index.html  main-N3ORGMVP.js  styles-US5R5DIC.css
api/ui_dist/: 3rdpartylicenses.txt  chunk-232IO773.js  chunk-23CACEX4.js  chunk-23GWKH72.js  chunk-2B43CYQL.js  chunk-2BBQPTZR.js  chunk-2BX4F2KH.js  chunk-2C2INNBG.js  chunk-2CEJU6ZM.js  chunk-2D3HIYJI.js  chunk-2E7ALQWO.js  chunk-2EGOBS7C.js  chunk-2EPOYP5Z.js  chunk-2FGLSIVP.js  chunk-2GG57MJU.js  chunk-2GGEGYB2.js  chunk-2H6FL3NW.js  chunk-2IF3OWNL.js  chunk-2IJUZPAL.js  chunk-2JOQJ5LA.js  chunk-2LCFIPBE.js  chunk-2LFQODZI.js  chunk-2LMPIH25.js  chunk-2M2XK4JE.js  chunk-2MFV7R5B.js  chunk-2MJPAQLR.js  chunk-2MNIJJRI.js  chunk-2MNWUGY2.js  chunk-2MTIXPVF.js  chunk-2MZOB7VT.js  chunk-2NOPPTP6.js  chunk-2NTP5456.js  chunk-2NUJE3PG.js  chunk-2OCNI6TL.js  chunk-2OKP4TH5.js  chunk-2PJSC527.js  chunk-2QA6PJYJ.js  chunk-2QATJSUV.js  chunk-2QZXT4YH.js  chunk-2SHAT4QI.js  (+1874 more)
config/: settings.py
core/: analyzer.py  audit.py  banner.py  bookmarks.py  cache.py  chaining.py  commands.py  completer.py  config.py  connect.py  context.py  context_formatter.py  context_switcher.py  dispatcher.py  doctor.py  env_switch.py  executor.py  export.py  formatter.py  guided.py  health.py  healthcheck.py  history.py  init_wizard.py  insights.py  k8s.py  kubeconfig.py  notify.py  overview_formatter.py  pipe.py  plugins.py  pod_actions.py  policy.py  port_forward.py  profiles.py  remediation.py  resolver.py  safety.py  saved_queries.py  scheduler.py  (+10 more)
core/ai/: anomaly.py  correlation.py  engine.py  explain.py  generator.py  llm.py  nlp.py  playbooks.py  suggest.py
core/analytics/: aggregator.py  alerts.py  blast_radius.py  capacity.py  chargeback.py  collector.py  correlation.py  cost_model.py  engine.py  enriched_collector.py  enrichment.py  export.py  health.py  incidents.py  overview.py  predictive.py  queue.py  rightsizing.py  rightsizing_overview.py  safe_apply.py  state_cache.py  timeseries.py
core/collectors/: changes.py  configs.py  cost.py  cost_estimate.py  cost_trend.py  dep_health.py  deployments.py  diagnosis.py  diff.py  diff_timeline.py  events.py  gateway_monitor.py  gitops.py  helm.py  idle_resources.py  image_pull.py  inspect.py  jobs.py  labels.py  log_correlation.py  logs.py  mesh.py  metrics.py  metrics_history.py  multicluster.py  namespace.py  network.py  node_ops.py  nodes.py  pods.py  rbac.py  resource_ops.py  rollback_preview.py  rollouts.py  scaling.py  scorecard.py  search.py  security.py  services.py  taints.py  (+4 more)
core/diagnostics/: alerts.py  changes.py  correlation.py  engine.py  incidents.py  models.py  narrative.py  recommendations.py  registry.py  snapshots.py
core/execution/: engine.py  interfaces.py  kubectl.py  mock.py  policies.py  state_machine.py
deploy/: kubeasy.yaml  kubsome.yaml  plugins-manifest.json
docs/: api.md  architecture.md  cli.md  roadmap.md  web-ui.md
plugins/: example_health.py
tests/: conftest.py  test_analytics_overview.py  test_analytics_queue.py  test_analytics_security.py  test_api.py  test_bolt_collectors_performance.py  test_bolt_cost_optimization.py  test_bolt_image_pull.py  test_bolt_network_performance.py  test_bolt_node_ops_performance.py  test_bolt_overview.py  test_bolt_search_performance.py  test_bolt_services_performance.py  test_core.py  test_export_security.py  test_features.py  test_growth.py  test_growth_backend.py  test_idle_resources_security.py  test_nlp_ai.py  test_performance.py  test_pipe_security.py  test_safety_control_plane.py  test_sentinel_fix.py  test_sentinel_idle_resources_security.py  test_sentinel_notification.py  test_sentinel_sqli.py  test_sentinel_ssrf.py  test_sqli_security.py  test_taints.py  test_v15.py
tui/: app.py
ui/: angular.json  package-lock.json  package.json  pnpm-lock.yaml  proxy.conf.js
(+372 files in other folders)
