[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubsome"
version = "1.0.0"
description = "AI-native Kubernetes Operational Workspace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aloke Tewary"}
]
keywords = [
    "kubernetes", "k8s", "cli", "devops",
    "operations", "monitoring", "diagnostics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "questionary>=2.0",
    "rapidfuzz>=3.0",
    "humanize>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]
all = ["textual>=0.40", "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0"]

[project.scripts]
kubsome = "main:main"


[project.urls]
Homepage = "https://github.com/aloketewary/kubsome"
Issues = "https://github.com/aloketewary/kubsome/issues"
[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "config*", "tui*", "plugins*", "api*"]
