[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubsome"
version = "1.12.0"
description = "AI-native Kubernetes Operational Workspace"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Aloke Tewary", email = "aloketewary@gmail.com"}
]
keywords = [
    "kubernetes", "k8s", "cli", "devops",
    "operations", "monitoring", "diagnostics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "questionary>=2.0",
    "rapidfuzz>=3.0",
    "humanize>=4.0",
    "pyyaml>=6.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
]

[project.optional-dependencies]
tui = ["textual>=0.40"]
all = ["textual>=0.40"]
dev = ["pytest>=7.0", "httpx>=0.24.0", "build", "twine"]

[project.scripts]
kubsome = "main:main"

[project.urls]
Homepage = "https://github.com/aloketewary/kubsome"
Repository = "https://github.com/aloketewary/kubsome"
Issues = "https://github.com/aloketewary/kubsome/issues"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["core*", "config*", "tui*", "plugins*", "api*"]

[tool.setuptools.package-data]
api = ["ui_dist/**/*"]
